@@ -1,13 +1,11 @@
-package cgv_23rd.ceos.service;
+package cgv_23rd.ceos.service.query;
 
 import cgv_23rd.ceos.dto.schedule.response.ScheduleResponseDto;
 import cgv_23rd.ceos.entity.movie.MovieScreen;
-import cgv_23rd.ceos.entity.theater.Theater;
 import cgv_23rd.ceos.global.apiPayload.code.GeneralErrorCode;
 import cgv_23rd.ceos.global.apiPayload.exception.GeneralException;
-import cgv_23rd.ceos.repository.movie.MovieRepository;
+import cgv_23rd.ceos.mapper.ScheduleMapper;
 import cgv_23rd.ceos.repository.movie.MovieScreenRepository;
-import cgv_23rd.ceos.repository.theater.ScreenRepository;
 import cgv_23rd.ceos.repository.theater.TheaterRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,22 +15,18 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@Transactional
 @RequiredArgsConstructor
-public class ScheduleService {
+@Transactional(readOnly = true)
+public class ScheduleQueryService {
 
     private final TheaterRepository theaterRepository;
-    private final MovieRepository movieRepository;
     private final MovieScreenRepository movieScreenRepository;
-    private final ScreenRepository screenRepository;
+    private final ScheduleMapper scheduleMapper;
 
-    // 2. 극장별 상영 시간표 조회
-    @Transactional(readOnly = true)
     public List<ScheduleResponseDto> getSchedules(Long theaterId, LocalDate targetDate) {
-        Theater theater = theaterRepository.findById(theaterId)
+        theaterRepository.findById(theaterId)
                 .orElseThrow(() -> new GeneralException(GeneralErrorCode.THEATER_NOT_FOUND));
 
         LocalDateTime startOfDay = targetDate.atStartOfDay();
@@ -43,16 +37,7 @@ public class ScheduleService {
         );
 
         return schedules.stream()
-                .map(ms -> ScheduleResponseDto.builder()
-                        .movieScreenId(ms.getId())
-                        .movieId(ms.getMovie().getId())
-                        .movieTitle(ms.getMovie().getTitle())
-                        .screenId(ms.getScreen().getId())
-                        .screenName(ms.getScreen().getName())
-                        .sequence(ms.getSequence())
-                        .startAt(ms.getStartAt())
-                        .endAt(ms.getEndAt())
-                        .build())
-                .collect(Collectors.toList());
+                .map(scheduleMapper::toResponse)
+                .toList();
     }
 }
